Fix whitespace in non-highlight code blocks

--- a/assets/css/sass/blog/_unit-article.scss
+++ b/assets/css/sass/blog/_unit-article.scss
@@ -197,10 +197,6 @@
 		padding: 2px 3px;
 		white-space: nowrap;
 	}
-	li pre code {
-		background-color: $color-code-background;
-		white-space: pre-wrap;
-	}
 
 	img {
 		border: solid 5px transparent;
